Add Python script versions of notebooks

--- a/notebooks/models.ipynb
+++ b/notebooks/models.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "0f453a59-0077-4f65-92d0-a4d086791f0b",
    "metadata": {},
    "outputs": [
@@ -1958,8 +1958,447 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "9e8f66b2-0873-4314-acdb-4b0e9ca52706",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "final = pd.read_csv ('final.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "2642ba0e-3d55-4c25-8ea2-ea2db9d7e879",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>text_features</th>\n",
+       "      <th>embedding</th>\n",
+       "      <th>title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>low fantasy|surgical mask|lifting a female int...</td>\n",
+       "      <td>[0.012040429748594761, 0.013948115520179272, -...</td>\n",
+       "      <td>Toy Story (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>based on a book|construction site|brother sist...</td>\n",
+       "      <td>[0.018080798909068108, 0.06331375241279602, -0...</td>\n",
+       "      <td>Jumanji (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>Funniest Movies|best friend|sequel fever|grun ...</td>\n",
+       "      <td>[0.0014785799430683255, 0.04591622203588486, -...</td>\n",
+       "      <td>Grumpier Old Men (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>revenge|divorce|chick flick|single mother|char...</td>\n",
+       "      <td>[0.02682194672524929, 0.06319113820791245, -0....</td>\n",
+       "      <td>Waiting to Exhale (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>sentimental|parent child relationship|growing ...</td>\n",
+       "      <td>[0.024181121960282326, 0.033560220152139664, -...</td>\n",
+       "      <td>Father of the Bride Part II (1995)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51318</th>\n",
+       "      <td>292143</td>\n",
+       "      <td>catalonia|village|replica|no narrator|seaside|...</td>\n",
+       "      <td>[0.03421638906002045, 0.024409234523773193, -0...</td>\n",
+       "      <td>La substància (2016)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51319</th>\n",
+       "      <td>292349</td>\n",
+       "      <td>politically incorrect|Comedy|Horror</td>\n",
+       "      <td>[-0.024666042998433113, 0.022995492443442345, ...</td>\n",
+       "      <td>Totally Killer (2023)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51320</th>\n",
+       "      <td>292371</td>\n",
+       "      <td>Stephen King|Fantasy|Horror</td>\n",
+       "      <td>[0.014681873843073845, 0.030048822984099388, -...</td>\n",
+       "      <td>Pet Sematary: Bloodlines (2023)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51321</th>\n",
+       "      <td>292597</td>\n",
+       "      <td>artificial intelligence|Horror|Sci-Fi</td>\n",
+       "      <td>[-0.02497914992272854, 0.030762914568185806, -...</td>\n",
+       "      <td>The Mill (2023)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>51322</th>\n",
+       "      <td>292629</td>\n",
+       "      <td>family relationships|documentary filmmaking|Do...</td>\n",
+       "      <td>[0.0038790360558778048, 0.05217632278800011, -...</td>\n",
+       "      <td>Gallivant (1997)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>51323 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       movieId                                      text_features  \\\n",
+       "0            1  low fantasy|surgical mask|lifting a female int...   \n",
+       "1            2  based on a book|construction site|brother sist...   \n",
+       "2            3  Funniest Movies|best friend|sequel fever|grun ...   \n",
+       "3            4  revenge|divorce|chick flick|single mother|char...   \n",
+       "4            5  sentimental|parent child relationship|growing ...   \n",
+       "...        ...                                                ...   \n",
+       "51318   292143  catalonia|village|replica|no narrator|seaside|...   \n",
+       "51319   292349                politically incorrect|Comedy|Horror   \n",
+       "51320   292371                        Stephen King|Fantasy|Horror   \n",
+       "51321   292597              artificial intelligence|Horror|Sci-Fi   \n",
+       "51322   292629  family relationships|documentary filmmaking|Do...   \n",
+       "\n",
+       "                                               embedding  \\\n",
+       "0      [0.012040429748594761, 0.013948115520179272, -...   \n",
+       "1      [0.018080798909068108, 0.06331375241279602, -0...   \n",
+       "2      [0.0014785799430683255, 0.04591622203588486, -...   \n",
+       "3      [0.02682194672524929, 0.06319113820791245, -0....   \n",
+       "4      [0.024181121960282326, 0.033560220152139664, -...   \n",
+       "...                                                  ...   \n",
+       "51318  [0.03421638906002045, 0.024409234523773193, -0...   \n",
+       "51319  [-0.024666042998433113, 0.022995492443442345, ...   \n",
+       "51320  [0.014681873843073845, 0.030048822984099388, -...   \n",
+       "51321  [-0.02497914992272854, 0.030762914568185806, -...   \n",
+       "51322  [0.0038790360558778048, 0.05217632278800011, -...   \n",
+       "\n",
+       "                                    title  \n",
+       "0                        Toy Story (1995)  \n",
+       "1                          Jumanji (1995)  \n",
+       "2                 Grumpier Old Men (1995)  \n",
+       "3                Waiting to Exhale (1995)  \n",
+       "4      Father of the Bride Part II (1995)  \n",
+       "...                                   ...  \n",
+       "51318                La substància (2016)  \n",
+       "51319               Totally Killer (2023)  \n",
+       "51320     Pet Sematary: Bloodlines (2023)  \n",
+       "51321                     The Mill (2023)  \n",
+       "51322                    Gallivant (1997)  \n",
+       "\n",
+       "[51323 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final = final.merge(movies[['movieId', 'title']], on='movieId', how='left')\n",
+    "final"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85dd40cd-7fa8-4ae8-afb7-1e11cc1df957",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "import ast\n",
+    "final['embedding'] = final['embedding'].apply(ast.literal_eval)\n",
+    "emb_matrix = np.array(final['embedding'].to_list(), dtype=float)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "0ca05a5c-4f2d-4899-8bad-35f23c4c8b63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recommend(movie_id, n=5):\n",
+    "    # Find movie index\n",
+    "    idx = final.index[final['movieId'] == movie_id][0]\n",
+    "    \n",
+    "    # Compute cosine similarities\n",
+    "    target = emb_matrix[idx]\n",
+    "    norms = np.linalg.norm(emb_matrix, axis=1) * np.linalg.norm(target)\n",
+    "    sims = np.dot(emb_matrix, target) / norms\n",
+    "    \n",
+    "    # Get top-N similar movies (excluding itself)\n",
+    "    top_idx = np.argsort(sims)[::-1][1:n+1]\n",
+    "    return final.iloc[top_idx][['movieId', 'title' , 'text_features']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "414cfddb-bce9-4066-9665-248b42ac4864",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>title</th>\n",
+       "      <th>text_features</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2843</th>\n",
+       "      <td>3114</td>\n",
+       "      <td>Toy Story 2 (1999)</td>\n",
+       "      <td>low fantasy|piggy bank|slinky dog|avi|mistaken...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>45251</th>\n",
+       "      <td>201588</td>\n",
+       "      <td>Toy Story 4 (2019)</td>\n",
+       "      <td>low fantasy|woody character|Disney|Pixar|piggy...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14021</th>\n",
+       "      <td>78499</td>\n",
+       "      <td>Toy Story 3 (2010)</td>\n",
+       "      <td>garbage chute|piggy bank|brother sister relati...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11397</th>\n",
+       "      <td>56176</td>\n",
+       "      <td>Alvin and the Chipmunks (2007)</td>\n",
+       "      <td>winter|live action cgi hybrid|family friendly|...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1689</th>\n",
+       "      <td>1920</td>\n",
+       "      <td>Small Soldiers (1998)</td>\n",
+       "      <td>attack|irreverence|live action and animation|b...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       movieId                           title  \\\n",
+       "2843      3114              Toy Story 2 (1999)   \n",
+       "45251   201588              Toy Story 4 (2019)   \n",
+       "14021    78499              Toy Story 3 (2010)   \n",
+       "11397    56176  Alvin and the Chipmunks (2007)   \n",
+       "1689      1920           Small Soldiers (1998)   \n",
+       "\n",
+       "                                           text_features  \n",
+       "2843   low fantasy|piggy bank|slinky dog|avi|mistaken...  \n",
+       "45251  low fantasy|woody character|Disney|Pixar|piggy...  \n",
+       "14021  garbage chute|piggy bank|brother sister relati...  \n",
+       "11397  winter|live action cgi hybrid|family friendly|...  \n",
+       "1689   attack|irreverence|live action and animation|b...  "
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example\n",
+    "recommend(1, 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "0997bd9c-d1d7-4b08-af02-975e78d527bd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>movieId</th>\n",
+       "      <th>title</th>\n",
+       "      <th>text_features</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22641</th>\n",
+       "      <td>122904</td>\n",
+       "      <td>Deadpool (2016)</td>\n",
+       "      <td>snow|construction site|character says i love y...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18530</th>\n",
+       "      <td>104241</td>\n",
+       "      <td>Kick-Ass 2 (2013)</td>\n",
+       "      <td>needless violence|smoke grenade|kicked in the ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36701</th>\n",
+       "      <td>168252</td>\n",
+       "      <td>Logan (2017)</td>\n",
+       "      <td>poisoning|lifting a female into the air|manhun...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12607</th>\n",
+       "      <td>68319</td>\n",
+       "      <td>X-Men Origins: Wolverine (2009)</td>\n",
+       "      <td>child in peril|set up|ororo munroe character|a...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>43985</th>\n",
+       "      <td>192389</td>\n",
+       "      <td>Venom (2018)</td>\n",
+       "      <td>humor|manhunt|program|biohazard suit|specimen|...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>46240</th>\n",
+       "      <td>210271</td>\n",
+       "      <td>6 Underground (2019)</td>\n",
+       "      <td>no story|air strike|afghanistan|close up of ey...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18445</th>\n",
+       "      <td>103772</td>\n",
+       "      <td>Wolverine, The (2013)</td>\n",
+       "      <td>snow|thrown off a balcony|stabbed in the stoma...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18156</th>\n",
+       "      <td>102125</td>\n",
+       "      <td>Iron Man 3 (2013)</td>\n",
+       "      <td>child in peril|snow|child genius|toy gun|power...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6931</th>\n",
+       "      <td>7439</td>\n",
+       "      <td>Punisher, The (2004)</td>\n",
+       "      <td>organized crime|character says i love you|crut...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22651</th>\n",
+       "      <td>122924</td>\n",
+       "      <td>X-Men: Apocalypse (2016)</td>\n",
+       "      <td>snow|no story|Oscar Isaac|group name in title|...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       movieId                            title  \\\n",
+       "22641   122904                  Deadpool (2016)   \n",
+       "18530   104241                Kick-Ass 2 (2013)   \n",
+       "36701   168252                     Logan (2017)   \n",
+       "12607    68319  X-Men Origins: Wolverine (2009)   \n",
+       "43985   192389                     Venom (2018)   \n",
+       "46240   210271             6 Underground (2019)   \n",
+       "18445   103772            Wolverine, The (2013)   \n",
+       "18156   102125                Iron Man 3 (2013)   \n",
+       "6931      7439             Punisher, The (2004)   \n",
+       "22651   122924         X-Men: Apocalypse (2016)   \n",
+       "\n",
+       "                                           text_features  \n",
+       "22641  snow|construction site|character says i love y...  \n",
+       "18530  needless violence|smoke grenade|kicked in the ...  \n",
+       "36701  poisoning|lifting a female into the air|manhun...  \n",
+       "12607  child in peril|set up|ororo munroe character|a...  \n",
+       "43985  humor|manhunt|program|biohazard suit|specimen|...  \n",
+       "46240  no story|air strike|afghanistan|close up of ey...  \n",
+       "18445  snow|thrown off a balcony|stabbed in the stoma...  \n",
+       "18156  child in peril|snow|child genius|toy gun|power...  \n",
+       "6931   organized crime|character says i love you|crut...  \n",
+       "22651  snow|no story|Oscar Isaac|group name in title|...  "
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "recommend(187593, 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f667d5aa-e18f-4f45-b90a-fcadfeb37149",
    "metadata": {},
    "outputs": [],
    "source": []
